<resources>
    <string name="app_name">Unsmoke</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="login">Login</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="welcome">Welcome!</string>
    <string name="login_description">Log in to continue your journey towards a smoke-free life</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_password">Create New Password</string>
    <string name="or">or</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="no_acc">Don\'t have an account yet?</string>
    <string name="toSignup">Signup Now</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hello">Hello!</string>
    <string name="signup_description">Let\'s go, Sign up to start your smoke-free journey</string>
    <string name="terms_and_conditions"><![CDATA[By signing up, I agree to the terms & conditions of the Unsmoke app.]]></string>
    <string name="sign_up">Sign Up</string>
    <string name="have_acc">Already have an account?</string>
    <string name="login_here">Login Here!</string>
    <string name="invalid_email">Enter your email accordingly</string>
    <string name="password_alert">Password must not be less than 8 characters</string>
    <string name="forgot_password_instruction">Enter the email associated with your account and we will send an email with instructions to reset password</string>
    <string name="new_password_description">Your new password must be different from previous used password</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="ok">Ok</string>
    <string name="title_plan">Plan</string>
    <string name="title_rank">Rank</string>
    <string name="title_profile">Profile</string>
    <string name="title_edit">Edit</string>
    <string name="title_preferences">Preferences</string>
    <string name="full_name">Full Name</string>
    <string name="plan_detail_title">Plan</string>
    <string name="plan_duration">Duration</string>
    <string name="plan_percentage">87%</string>
    <string name="plan_detail_progress">Progress Details</string>
    <string name="plan_week">Week</string>
    <string name="plan_description">Descriptions</string>
    <string name="title_challenges">Challenges</string>
    <string name="password_uppercase_error">Password must contain at least one uppercase letter</string>
    <string name="password_lowercase_error">Password must contain at least one lowercase letter</string>
    <string name="password_digit_error">Password must contain at least one digit</string>
    <string name="password_special_char_error">Password must contain at least one special character</string>
    <string name="challenge_desc">Complete the following challenges to earn XP and daily streaks!</string>
    <string name="challenge_smoke">Limit daily cigarettes</string>
    <string name="challenge_breath">Breathing Exercise</string>
    <string name="milestone_title">Badges Colletions</string>
    <string name="milestone_desc">The badges represent the milestone you have achieved. Keep collecting them to reach your ultimate goals!</string>
    <string name="rank_title">Rank</string>
    <string name="xp_title">XP</string>
    <string name="rank_description">Compete with people who have the same goals as you. Break a leg!</string>
    <string name="preferences_notifications">Notifications</string>
    <string name="preferences_darkmode">Dark Mode</string>
    <string name="preferences_language">Language</string>
    <string name="preferences_guide">Guide</string>
    <string name="preferences_info">About Us</string>
    <string name="preferences_help">Help Center</string>
    <string name="shop_title">Shop</string>
    <string name="logout">Logout</string>
    <string name="choose_your_province">Choose Your Province</string>
    <string name="choose_your_city">Choose Your City</string>
    <string name="choose_your_date_of_birth">Choose Your Date of Birth</string>
    <string name="what_is_your_gender">what is your gender</string>
    <string name="how_long_have_you_been_smoking">How long have you been smoking?</string>
    <string name="select_a_date_approximately">select a date approximately</string>
    <string name="e_g_5">e.g: 5</string>
    <string name="e_g_20">e.g: 20</string>
    <string name="e_g_35000">e.g: 35000</string>
    <string name="how_many_total_cigarettes_per_pack_do_you_usually_consume">how many total cigarettes per pack do you usually consume?</string>
    <string name="how_much_does_1_pack_of_cigarettes_cost">How much does 1 pack of cigarettes cost?</string>
    <string name="do_you_use_nicotine_alternative_medicines">Do you use nicotine alternative medicines?</string>
    <string name="are_you_currently_using_e_cigarettes">Are you currently using e-cigarettes?</string>
    <string name="do_you_use_any_other_tobacco_products">Do you use any other tobacco products?</string>
    <string name="are_you_currently_experiencing_depression">Are you currently experiencing depression?</string>
    <string name="are_you_feeling_demoralized_right_now">Are you feeling demoralized right now?</string>
    <string name="start">Start</string>
    <string name="let_s_test_your_breath">Let\'s Test Your Breath</string>
    <string name="hi_andi">Hi, Andi</string>
    <string name="what_time_do_you_wake_up">what time do you wake up?</string>
    <string name="select_a_time_approximately">select a time approximately</string>
    <string name="what_time_did_you_smoke_your_first_cigarette_after_waking_up">What time did you smoke, your first cigarette after waking up?</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="how_many_cigarettes_do_you_consume_per_day">how many cigarettes do you consume per day?</string>
    <string name="did_you_smoke_during_the_previous_7_days">Did you smoke during the previous 7 days?</string>
    <string name="what_is_your_motivation_to_quit_smoking">What is your motivation to quit smoking</string>
    <string name="empty_name">Field Cannot Be Empty</string>
    <string name="title_list_plan">Step 2: choose the plan that best suits your needs to achieve a great position there.</string>
    <string name="description_list_plan">We\'ve made you a selection of quit smoking plans. The higher the percentage, the more suitable the plan is for you.</string>
    <string name="choose_the_plan_you_want">Choose the plan you want!</string>

    <string name="journaling_quotes">Understand your emotions, commitments, and challenges during the process of quitting smoking. By getting to know yourself better, you can enhance your awareness and increase your chances of successfully quitting smoking.</string>
    <string name="question_emotions">What is the main emotion you are feeling right now?</string>
    <string name="question_challenges">What challenges are you facing in resisting the urge to smoke today?</string>
    <string name="question_commitment">Write down your commitment to quit smoking for tomorrow!</string>
    <string name="journaling_summary">Summary of your daily journal today</string>
    <string name="helper_edt">Write your answer here</string>

    <string name="summary_emotions">Today you feel %1$s</string>
    <string name="summary_challenges">The challenge you face today is %1$s</string>
    <string name="summary_commitment">Your commitment for tomorrow is %1$s</string>

    <string name="smoke_consumed">Cigarettes consumed</string>
    <string name="smoke_limit">Cigarettes limit</string>
    <string name="journaling_description">You will get an extra +40XP if you fill out this journal</string>
    <string name="journaling_title">Let\'s fill in your daily journal!</string>

    <string name="ismoke_title">Daily Cigarette Log</string>
    <string name="ismoke_descriptions">Enter the following data each time you smoke to record your daily cigarette intake and help recognize any patterns in your smoking habits.</string>
    <string name="smoking_time_question">What time are you smoking right now?</string>
    <string name="smoking_quantity_question">How many cigarettes are you consuming right now?</string>
    <string name="smoking_feelings_question">How are you feeling right now?</string>
    <string name="smoking_reason_question">What made you want to smoke?</string>
    <string name="retry">Retry</string>

    <string name="result_success_recorded_title">Log has been saved!</string>
    <string name="result_success_recorded_description">Remember not to exceed the daily smoking limit that has been set. If you fail, you will lose your streak and fail to gain XP, which will affect the condition of your virtual lungs!</string>
    <string name="result_failed_recorded_title">You failed to get streak and XP!</string>
    <string name="result_failed_recorded_description">You have exceeded the allowed cigarette consumption limit for today, so your streak will be lost and you won\'t gain XP. Don\'t give up, try again tomorrow!</string>

    <string name="result_journal_success_title">You have filled out your journal today!</string>
    <string name="result_journal_success_description">We are sure you can succeed in reaching your goals. Hard work will not betray the results and consistency is the key!</string>
    <string name="xp_earned">XP Earned</string>

    <string name="username">username</string>
    <string name="choose_your_photo_profile">Choose your photo profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_photo_profile">Edit Photo Profile</string>
    <string name="equiped">Equiped</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="desc_otp_register">Enter the otp code that has been sent to your email</string>

    <string name="result_hold_breath_title">Breathing exercise complete!</string>
    <string name="result_hold_breath_description">Well done on finishing your breathing session! Remember, regular practice can greatly enhance your focus, reduce stress, and improve overall health. Keep up the good work and make breathing exercises a part of your daily wellness routine.</string>
    <string name="duration">Duration</string>
    <string name="highest_record">Highest record</string>

    <string name="did_you_know">Did you know?</string>
    <string name="medical_news_description">Medical News Today explains that the average person can hold their breath for about 30–90 seconds.</string>
    <string name="title_milestone">Milestone</string>
</resources>