<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent_white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.journal.screen.JournalingFiveFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/journaling_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/normal_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/iv_assets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/journaling_toolbar"
        app:srcCompat="@drawable/asset_journaling_five" />

    <TextView
        android:id="@+id/tv_journaling_summary"
        style="@style/TextContent.TitleSecondaryGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/journaling_summary"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/accent_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_assets" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_journaling_summary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/card_border"
            android:layout_marginHorizontal="16dp"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_feeling"
                style="@style/TextContent.Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary_emotions"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/tv_challenge"
                style="@style/TextContent.Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary_challenges"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/tv_commitment"
                style="@style/TextContent.Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary_commitment"
                android:textSize="16sp"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.cpp.unsmoke.utils.customview.CustomButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_state"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>