<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_green"
    tools:context=".ui.auth.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linear_layout_radius"
        android:orientation="vertical"
        android:paddingTop="42dp"
        android:paddingBottom="64dp"
        android:paddingHorizontal="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            style="@style/TextContent.TitleSecondaryGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/welcome"
            android:textSize="27sp"
            android:textColor="@color/dark_green"/>

        <TextView
            style="@style/TextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:text="@string/login_description"
            android:textSize="14sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_edit_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:startIconDrawable="@drawable/ic_baseline_email_24">

            <com.cpp.unsmoke.utils.customview.EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_edit_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.cpp.unsmoke.utils.customview.EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:paddingStart="0dp"
                android:paddingEnd="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btn_forgot_password"
            style="@style/TextContent.TitleSecondaryGreen"
            android:textAlignment="textEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forgot_password"
            android:textColor="@color/dark_green"/>

        <com.cpp.unsmoke.utils.customview.CustomButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@drawable/button_state"
            android:layout_marginBottom="24dp"
            android:textAllCaps="false"
            android:text="@string/login"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_semibold"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="18dp">

            <View
                android:id="@+id/line_start"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/accent_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_or"/>

            <TextView
                android:id="@+id/tv_or"
                style="@style/TextContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/or"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/line_end"
                app:layout_constraintStart_toEndOf="@id/line_start"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/line_end"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/accent_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_or"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_signin_with_google"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/sign_in_with_google"
            android:textColor="@color/accent_black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:strokeColor="#6D7280"
            app:strokeWidth="2dp"
            android:layout_marginBottom="28dp"
            android:layout_gravity="center_horizontal"
            android:drawableLeft="@drawable/google" />

        <LinearLayout
            android:id="@+id/layoutToSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/noAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/no_acc"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8sp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/toSignup"
                android:textColor="@color/dark_green"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>