<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_green"
    tools:context=".ui.auth.forgotpassword.ForgotPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/forgot_password_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:fontFamily="@font/poppins_semibold"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linear_layout_radius"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
        android:paddingTop="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            style="@style/TextContent.TitleSecondaryGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/forgot_password"
            android:textColor="@color/dark_green"
            android:textSize="27sp" />

        <TextView
            style="@style/TextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/forgot_password_instruction"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgot_password_edit_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="195dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:startIconTint="@color/neutral_50"
            app:startIconDrawable="@drawable/fi_rr_envelope">

            <com.cpp.unsmoke.utils.customview.EditText
                android:id="@+id/edt_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.cpp.unsmoke.utils.customview.CustomButton
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/button_state"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textSize="16sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>