<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent_white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.journal.screen.JournalingResultFragment">

    <ImageView
        android:id="@+id/iv_success_asset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/self_confidence_asset"/>

    <TextView
        android:id="@+id/tv_result_journal_success_title"
        style="@style/TextContent.TitleSecondaryBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/result_journal_success_title"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_success_asset"/>

    <TextView
        android:id="@+id/tv_result_journal_success_description"
        style="@style/TextContent.Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_result_journal_success_title"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/result_journal_success_description"
        android:textAlignment="center"/>

    <androidx.cardview.widget.CardView
        android:layout_width="104dp"
        android:layout_height="91dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_result_journal_success_description">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >

            <TextView
                android:id="@+id/tv_xp_earned_title"
                style="@style/TextContent.DescriptionMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/xp_earned"
                android:textAlignment="center"
                android:textColor="@color/dark_green"
                />

            <TextView
                android:id="@+id/tv_xp_point"
                style="@style/TextContent.TitleSecondaryBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="5"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/dark_green"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.cpp.unsmoke.utils.customview.CustomButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_state"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>